# Mensis_test

./: CMakeLists.txt  LICENSE  README.md  TODO  example.json  install_Mensis_test.sh  main.cpp  main.py  test1.json
.cache/clangd/index/: cpu_microbenchmarks.cpp.2F17C5192974F0FC.idx  cpu_microbenchmarks.cpp.3DC59650A60271C9.idx  cpu_microbenchmarks.h.1BF49F15284C0F4F.idx  cpu_microbenchmarks.h.9B0DF967AC30A3D9.idx  disk_microbenchmarks.cpp.3FC8436FFB0EFA14.idx  disk_microbenchmarks.cpp.4600232CB385E9D4.idx  disk_microbenchmarks.h.23642D2F43941111.idx  disk_microbenchmarks.h.CF7AEECE35BD195B.idx  gpu_microbenchmarks.cu.DF319C08DEDE2A29.idx  gpu_microbenchmarks.cu.F59373D5B07600A8.idx  gpu_microbenchmarks.h.ADF091AB698A1BE3.idx  gpu_microbenchmarks.h.B0D0AABDAA0BC4F4.idx  json.hpp.117F55B2B6CC41D8.idx  machine.cpp.229D5D28F8B9E810.idx  machine.cpp.DC78CFC31AC4B56F.idx  machine.h.AF7908B6E6C1C9BC.idx  machine.h.C4B7C4EE653DFE40.idx  main.cpp.C76A0A8C83234FA2.idx  runner.cpp.766FA954B1D723D5.idx  runner.h.074E9BEEC01BBC0A.idx  test_CPU.cpp.6875A622F6DF6AAF.idx  test_CPU.cpp.9B9DB5ABD496A579.idx  test_GPU.cpp.4ECE40893FE1D325.idx  test_GPU.cpp.8F82E26AEAED1B7F.idx  test_disk.cpp.70152D490E513642.idx  test_disk.cpp.B2129AF3905DFFB6.idx  test_machine.cpp.47336BDFC8085223.idx  test_machine.cpp.A637F2C98FC742DA.idx  test_runner.cpp.F9090D3082CD5129.idx
collectors/: machine.cpp  machine.h
microbenchmarks/: CMakeLists.txt  cpu_microbenchmarks.cpp  cpu_microbenchmarks.h  disk_microbenchmarks.cpp  disk_microbenchmarks.h  gpu_microbenchmarks.cu  gpu_microbenchmarks.h
python/: __init__.py
python/AI_kernel_benchmarks/: AI_kernels.py  __init__.py  tests.py
python/analysis/: analysis.py
python/python_runner/: __init__.py  runner.py  tests.py
raw_data/: kernel_data.json  microbenchmarks_data.json
results/: results.json
system_benchmarks/: CMakeLists.txt
system_benchmarks/collectors/: CMakeLists.txt  machine.cpp  machine.h
system_benchmarks/microbenchmarks/: CMakeLists.txt  cpu_microbenchmarks.cpp  cpu_microbenchmarks.h  gpu_microbenchmarks.cu  gpu_microbenchmarks.h
system_benchmarks/runner/: CMakeLists.txt  runner.cpp  runner.h
system_benchmarks/tests/: CMakeLists.txt  test_CPU.cpp  test_GPU.cpp  test_disk.cpp  test_runner.cpp
tests/: CMakeLists.txt  test_CPU.cpp  test_GPU.cpp  test_disk.cpp  test_machine.cpp
